--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="Qingan Yan" content="Homepage">
 
     <link rel="stylesheet" href="./addons/jemdoc.css" type="text/css">
+    <link rel="stylesheet" href="./addons/mystyle.css" type="text/css">
     <title>Qingan Yan's Homepage</title>
 
     <link rel="shortcut icon" href="./figures/favicon.ico">
@@ -27,7 +28,7 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Research Scientist
-                                    <br>Silicon Valley Research Center, JD.com American 
+                                    <br>Silicon Valley Research Center, JD.com American
                                     <br>
                                 </b>
                             </span>
@@ -69,44 +70,53 @@
             </tbody>
         </table>
 
+
         <h1 style="font-size:24px">Recent News</h1>
-        <table class="imgtable">
-            <tbody>
-                <tr>
-                    <td align="left">
-                        <ul>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Feb 24, 2019]:</b> <i> One paper is accepted to CVPR 2020.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Feb 04, 2019]:</b> <i> One paper is accepted to GMP 2020 and will be published in CAGD.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[May 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Apr 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018. P.S. The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Nov 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Jun 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[May 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>Our work on structure-from-motion disambiguation is accepted to CVPR 2017.</i></p>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div style="height:260px;overflow-y:auto">
+            <table class="imgtable">
+                <tbody>
+                    <tr>
+                        <td align="left">
+                            <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 24, 2019]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Feb 04, 2019]:</b> <i> One paper on point cloud completion is accepted to GMP 2020 and will be published in CAGD.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[May 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">
+                                        <b>[Apr 01, 2018]:</b> <i>
+                                            Our paper on RGBD texture mapping is accepted to CVPR 2018
+                                            and the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> is also available.
+                                            Due to the agreement with other company, some parts can only be released in the form of .so files.
+                                        </i>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Nov 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Jun 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[May 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>Our work on structure-from-motion disambiguation is accepted to CVPR 2017.</i></p>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <h1 style="font-size:24px">Publications</h1>
 
@@ -151,8 +161,12 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <h3 style="font-family:Helvetica"><b>Wavelet Flow: Optical Flow Guided Wavelet Facial Image
-Fusion</b></h3>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Wavelet Flow: Optical Flow Guided Wavelet Facial Image
+                                        Fusion
+                                    </b>
+                                </h3>
                                 <p style="font-family:Helvetica">
                                     Hong Ding, <b>Qingan Yan</b>, Gang Fu, Chunxia Xiao
                                 </p>
@@ -423,88 +437,90 @@ Fusion</b></h3>
                                         (in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)
                                     </b>
                                 </p>
-                                <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, pending, Jan/19/2018</i>)</p>
+                                <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, granted, Feb 07, 2020</i>)</p>
                             </li>
                             <li style="padding-top:10px">
                                 <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
-                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
+                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun 17, 2015</i>)</p>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
         </table>
-        
+
 
         <h1 style="font-size:24px">Professional Activities</h1>
-        <table class="imgtable">
-            <tbody>
-                <tr>
-                    <td align="left">
-                        <p style="font-family:Helvetica"><b>Journal Reviewer</b></p>
-                        <ul>
-                            <li>
-                                <p style="font-family:Helvetica">IEEE Transactions on Pattern Analysis and Machine Intelligence <a href="https://mc.manuscriptcentral.com/tpami-cs">(TPAMI)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">IEEE Transactions on Circuits and Systems for Video Technology <a href="https://mc.manuscriptcentral.com/tcsvt">(TCSVT)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">Neurocomputing <a href="https://ees.elsevier.com/neucom/default.asp">(NEUCOM)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">Journal of Electronic Imaging <a href="https://jei.msubmit.net/cgi-bin/main.plex?form_type=home">(JEI)</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">Concurrency and Computation: Practice and Experience <a href="https://mc.manuscriptcentral.com/cpe">(CPE)</a></p>
-                            </li>
-                        </ul>
-                        <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
-                        <ul>
-                            <li>
-                                <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>, <a href="http://cvpr2020.thecvf.com/">2020</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">ECCV <a href="https://eccv2020.eu/">2020</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">EG <a href="https://conferences.eg.org/egev20/">2020</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">CRV <a href="http://www.computerrobotvision.org/">2020</a></p>
-                            </li>
-                        </ul>
-                        <p style="font-family:Helvetica"><b>Presentations</b></p>
-                        <ul>
-                            <li>
-                                <p style="font-family:Helvetica">CVPR <a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">2017</a></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica">Pacific Graphics <a href="http://graphics.ewha.ac.kr/PG14/">2014</a>, <a href="https://indico.oist.jp/indico/event/0/">2016</a></p>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div style="height:400px;overflow-y:auto">
+            <table class="imgtable">
+                <tbody>
+                    <tr>
+                        <td align="left">
+                            <p style="font-family:Helvetica"><b>Journal Reviewer</b></p>
+                            <ul>
+                                <li>
+                                    <p style="font-family:Helvetica">IEEE Transactions on Pattern Analysis and Machine Intelligence <a href="https://mc.manuscriptcentral.com/tpami-cs">(TPAMI)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">IEEE Transactions on Circuits and Systems for Video Technology <a href="https://mc.manuscriptcentral.com/tcsvt">(TCSVT)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">Neurocomputing <a href="https://ees.elsevier.com/neucom/default.asp">(NEUCOM)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">Journal of Electronic Imaging <a href="https://jei.msubmit.net/cgi-bin/main.plex?form_type=home">(JEI)</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">Concurrency and Computation: Practice and Experience <a href="https://mc.manuscriptcentral.com/cpe">(CPE)</a></p>
+                                </li>
+                            </ul>
+                            <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
+                            <ul>
+                                <li>
+                                    <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>, <a href="http://cvpr2020.thecvf.com/">2020</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">ECCV <a href="https://eccv2020.eu/">2020</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">EG <a href="https://conferences.eg.org/egev20/">2020</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">CRV <a href="http://www.computerrobotvision.org/">2020</a></p>
+                                </li>
+                            </ul>
+                            <p style="font-family:Helvetica"><b>Presentations</b></p>
+                            <ul>
+                                <li>
+                                    <p style="font-family:Helvetica">CVPR <a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">2017</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">Pacific Graphics <a href="http://graphics.ewha.ac.kr/PG14/">2014</a>, <a href="https://indico.oist.jp/indico/event/0/">2016</a></p>
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <h1 style="font-size:24px">My Resources</h1>
         <table class="imgtable">
