--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
                         <td align="left">
                             <ul>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 24, 2019]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[Feb 04, 2019]:</b> <i> One paper on point cloud completion is accepted to GMP 2020 and will be published in CAGD.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Feb 04, 2020]:</b> <i> One paper on point cloud completion is accepted to GMP 2020 and will be published in CAGD.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
                                 </li>
                                 <li>
-                                    <p style="font-family:Helvetica"><b>[May 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
+                                    <p style="font-family:Helvetica"><b>[Mar 15, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica">
@@ -119,6 +119,70 @@
         </div>
 
         <h1 style="font-size:24px">Publications</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Joint Texture and Geometry Optimization for RGB-D Reconstruction
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Yanping Fu, <b>Qingan Yan</b>, Jie Liao, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020.</i>
+                                </p>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [PDF (coming soon)]&nbsp;
+                                    [Code (coming soon)]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        *** Point Completion Network ***
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Wenxiao Zhang, Chengjiang Long, <b>Qingan Yan</b>, Alix L.H. Chow, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>Computer-Aided Geometric Design <b>(CAGD)</b>, 2020. (<a href="https://indico.oist.jp/event/10/">Proceedings of Geometric Modeling and Processing 2020</a>)</i>
+                                </p>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [PDF (coming soon)]&nbsp;
+                                    [Code (coming soon)]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
