--- a/index.html
+++ b/index.html
@@ -591,13 +591,16 @@
             <tbody>
                 <tr>
                     <td align="left">
-                        <p style="font-family:Helvetica"><b>3D Vision Tools</b></p>
+                        <p style="font-family:Helvetica"><b>3D Vision</b></p>
                         <ul>
+                            <li>
+                                <p style="font-family:Helvetica"><a href="https://github.com/OneEyedEagle/EAGLE-TextureMapping">Texture Mapping</a> (C++) <br><i>Our trial implementation of the paper, "Patch-Based Optimization for Image-Based Texture Mapping" SIGGRAPH 2017.</i></p>
+                            </li>
                             <li>
                                 <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/SfM_Viewer">SfM Viewer</a> (QT &amp C++) <br><i>The code can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer</a> (Visual Studio &amp C++) <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer</a> (Visual Studio &amp OpenCV) <br><i>A distance measuring software based on classical binocular stereo algorithm and OpenCV.</i></p>
                             </li>
                         </ul>
                     </td>
