--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <li>
                                 <h3 style="font-family:Helvetica">
                                     <b>
-                                        *** Point Completion Network ***
+                                        Multi-Stage Point Completion Network with Critical Set Supervision
                                     </b>
                                 </h3>
                                 <p style="font-family:Helvetica">
