--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </p>
                         <p>
                             <span style="font-family:Helvetica">
-                                <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com OR yanqingan <i>at</i> whu <i>dot</i> edu <i>dot</i> cn<br>
+                                <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com<br>
                                 <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a>
@@ -43,7 +43,7 @@
                             </span>
                         </p>
                         <p style="padding-top:8px">
-                            [<a href="./docs/qingan_yan_cs_phd.pdf"><u>Curriculum Vitae</u></a>]
+                            [<a href="./docs/cv_qay.pdf"><u>Curriculum Vitae</u></a>]
                         </p>
                     </td>
                 </tr>
@@ -58,7 +58,7 @@
                         <p style="font-family:Helvetica">
                             I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA.
                             Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
-                            In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.
+                            In JD, I work on 3D related projects, mainly involved in <i>virtual fitting, efficient geometry acquisition and texture optimization</i>.
                         </p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of Computer Vision and Graphics.
@@ -72,12 +72,15 @@
 
 
         <h1 style="font-size:24px">Recent News</h1>
-        <div style="height:260px;overflow-y:auto">
+        <div style="height:240px;overflow-y:auto">
             <table class="imgtable">
                 <tbody>
                     <tr>
                         <td align="left">
                             <ul>
+                                <li>
+                                    <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
+                                </li>
                                 <li>
                                     <p style="font-family:Helvetica"><b>[Feb 24, 2020]:</b> <i> Our work on joint geometry and texture optimization is accepted to CVPR 2020.</i></p>
                                 </li>
@@ -124,7 +127,7 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
-                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                        <img src="./figures/cvpr20_joint.jpg" width="100%<article>">
                     </td>
                     <td align="left">
                         <ul>
@@ -142,7 +145,8 @@
                                 </p>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [PDF (coming soon)]&nbsp;
+                                    [<a href="./docs/cvpr20_joint.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
                                     [Code (coming soon)]
                                 </p>
                             </li>
@@ -156,7 +160,7 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
-                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                        <img src="./figures/gmp20_multistage.jpg" width="100%<article>">
                     </td>
                     <td align="left">
                         <ul>
@@ -174,7 +178,7 @@
                                 </p>
                                 </p>
                                 <p style="padding-top:10px">
-                                    [PDF (coming soon)]&nbsp;
+                                    [<a href="./docs/gmp20_multistage.pdf"><u>PDF</u></a>]&nbsp;
                                     [Code (coming soon)]
                                 </p>
                             </li>
@@ -267,7 +271,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_joint.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="./docs/cgi19_joint_sup.pdf"><u>Supplemental Material</u></a>]
+                                    [<a href="./docs/cgi19_joint_supp.pdf"><u>Supplemental Material</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -295,7 +299,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="./docs/cgi19_effective_sup.pdf"><u>Supplemental Material</u></a>]
+                                    [<a href="./docs/cgi19_effective_supp.pdf"><u>Supplemental Material</u></a>]
                                     [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code</u></a>]
                                 </p>
                             </li>
@@ -498,13 +502,14 @@
                                 <p style="font-family:Helvetica">
                                     <b>
                                         Pixel-level Point Cloud Densification Method for Geometric Clue Perception in Three-dimensional Scene Reconstruction
-                                        (in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)
+                                        <!--(in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)-->
                                     </b>
                                 </p>
                                 <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, granted, Feb 07, 2020</i>)</p>
                             </li>
                             <li style="padding-top:10px">
-                                <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
+                                <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model 
+                                    <!--(in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)--></b></p>
                                 <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun 17, 2015</i>)</p>
                             </li>
                         </ul>
@@ -515,13 +520,23 @@
 
 
         <h1 style="font-size:24px">Professional Activities</h1>
-        <div style="height:400px;overflow-y:auto">
+        <!--<div style="height:200px;overflow-y:auto">-->
             <table class="imgtable">
                 <tbody>
                     <tr>
                         <td align="left">
-                            <p style="font-family:Helvetica"><b>Journal Reviewer</b></p>
-                            <ul>
+                            <p style="font-family:Helvetica"><b>Journal Reviewer:</b>
+                                <a href="https://mc.manuscriptcentral.com/tpami-cs">IEEE TPAMI</a>,
+                                <a href="https://mc.manuscriptcentral.com/tip-ieee">TIP</a>,
+                                <a href="https://mc.manuscriptcentral.com/tmm-ieee">TMM</a>,
+                                <a href="https://mc.manuscriptcentral.com/tcsvt">TCSVT</a>,
+                                <a href="https://mc.manuscriptcentral.com/cyb-ieee">TCYB</a>,
+                                <a href="https://ees.elsevier.com/neucom/default.asp">Neurocomputing</a>,
+                                <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">JARS</a>,
+                                <a href="https://jei.msubmit.net/cgi-bin/main.plex?form_type=home">JEI</a>,
+                                <a href="https://mc.manuscriptcentral.com/cpe">CPE</a>
+                            </p>
+                            <!--<ul>
                                 <li>
                                     <p style="font-family:Helvetica">IEEE Transactions on Pattern Analysis and Machine Intelligence <a href="https://mc.manuscriptcentral.com/tpami-cs">(TPAMI)</a></p>
                                 </li>
@@ -549,9 +564,18 @@
                                 <li>
                                     <p style="font-family:Helvetica">Concurrency and Computation: Practice and Experience <a href="https://mc.manuscriptcentral.com/cpe">(CPE)</a></p>
                                 </li>
-                            </ul>
-                            <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
-                            <ul>
+                            </ul>-->
+                            <p style="font-family:Helvetica"><b>Conference Reviewer:</b>
+                                CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>&amp;<a href="http://cvpr2020.thecvf.com/">2020</a>,
+                                ICCV <a href="http://iccv2019.thecvf.com/">2019</a>,
+                                ECCV <a href="https://eccv2020.eu/">2020</a>,
+                                WACV <a href="http://wacv2021.thecvf.com/home/">2021</a>,
+                                ACCV <a href="http://accv2020.kyoto/">2020</a>,
+                                CRV <a href="http://www.computerrobotvision.org/">2020</a>,
+                                AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a>,
+                                EG <a href="https://conferences.eg.org/egev20/">2020</a>
+                            </p>
+                            <!--<ul>
                                 <li>
                                     <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>, <a href="http://cvpr2020.thecvf.com/">2020</a></p>
                                 </li>
@@ -568,23 +592,32 @@
                                     <p style="font-family:Helvetica">EG <a href="https://conferences.eg.org/egev20/">2020</a></p>
                                 </li>
                                 <li>
+                                    <p style="font-family:Helvetica">WACV <a href="http://wacv2021.thecvf.com/home/">2021</a></p>
+                                </li>
+                                <li>
+                                    <p style="font-family:Helvetica">ACCV <a href="http://accv2020.kyoto/">2020</a></p>
+                                </li>
+                                <li>
                                     <p style="font-family:Helvetica">CRV <a href="http://www.computerrobotvision.org/">2020</a></p>
                                 </li>
-                            </ul>
-                            <p style="font-family:Helvetica"><b>Presentations</b></p>
-                            <ul>
+                            </ul>-->
+                            <p style="font-family:Helvetica"><b>Presentations</b>
+                                CVPR <a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">2017</a>,
+                                Pacific Graphics <a href="http://graphics.ewha.ac.kr/PG14/">2014</a>&amp;<a href="https://indico.oist.jp/indico/event/0/">2016</a>
+                            </p>
+                            <!--<ul>
                                 <li>
                                     <p style="font-family:Helvetica">CVPR <a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">2017</a></p>
                                 </li>
                                 <li>
                                     <p style="font-family:Helvetica">Pacific Graphics <a href="http://graphics.ewha.ac.kr/PG14/">2014</a>, <a href="https://indico.oist.jp/indico/event/0/">2016</a></p>
                                 </li>
-                            </ul>
+                            </ul>-->
                         </td>
                     </tr>
                 </tbody>
             </table>
-        </div>
+        <!--</div>-->
 
         <h1 style="font-size:24px">My Resources</h1>
         <table class="imgtable">
@@ -610,7 +643,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Feb 26, 2020 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jun 17, 2020 by Qingan Yan.</p>
             </div>
         </div>
     </div>
