--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             </tbody>
         </table>
 
-        <table class="imgtable">
+        <!--<table class="imgtable">
             <tbody>
                 <tr>
                     <td width="21%<article>">
@@ -490,8 +490,9 @@
                     </td>
                 </tr>
             </tbody>
-        </table>
+        </table>-->
 
+        <!--
         <h1 style="font-size:24px">Patents</h1>
         <table class="imgtable">
             <tbody>
@@ -502,22 +503,21 @@
                                 <p style="font-family:Helvetica">
                                     <b>
                                         Pixel-level Point Cloud Densification Method for Geometric Clue Perception in Three-dimensional Scene Reconstruction
-                                        <!--(in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)-->
+                                        (in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)
                                     </b>
                                 </p>
                                 <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, granted, Feb 07, 2020</i>)</p>
                             </li>
                             <li style="padding-top:10px">
                                 <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model 
-                                    <!--(in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)--></b></p>
+                                    (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
                                 <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun 17, 2015</i>)</p>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
-        </table>
-
+        </table>-->
 
         <h1 style="font-size:24px">Professional Activities</h1>
         <!--<div style="height:200px;overflow-y:auto">-->
