--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                         <td align="left">
                             <ul>
                                 <li>
+                                    <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One papers is accepted to ECCV 2020.</i></p>
+                                </li>
+                                <li>
                                     <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
@@ -127,6 +130,38 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
+                        <img src="./figures/coming_soon.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Detail Preserved Point Cloud Completion via Separated Feature Aggregation
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Wenxiao Zhang, <b>Qingan Yan</b>, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>European Conference on Computer Vision <b>(ECCV)</b>, 2020.</i>
+                                </p>
+                                <!--<p style="padding-top:10px">
+                                    [<a href="./docs/cvpr20_joint.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cvpr20_joint_supp.pdf"><u>Supplemental Material</u></a>]&nbsp;
+                                    [Code (coming soon)]
+                                </p>-->
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
                         <img src="./figures/cvpr20_joint.jpg" width="100%<article>">
                     </td>
                     <td align="left">
@@ -142,7 +177,6 @@
                                 </p>
                                 <p style="font-family:Helvetica">
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020.</i>
-                                </p>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr20_joint.pdf"><u>PDF</u></a>]&nbsp;
@@ -176,7 +210,6 @@
                                 <p style="font-family:Helvetica">
                                     <i>Computer-Aided Geometric Design <b>(CAGD)</b>, 2020. (<a href="https://indico.oist.jp/event/10/">Proceedings of Geometric Modeling and Processing 2020</a>)</i>
                                 </p>
-                                </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/gmp20_multistage.pdf"><u>PDF</u></a>]&nbsp;
                                     [Code (coming soon)]
@@ -208,7 +241,6 @@
                                 <p style="font-family:Helvetica">
                                     <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
                                 </p>
-                                </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/pg19_pyramid.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="https://github.com/Txusheng/PLC_"><u>Code</u></a>]
@@ -231,8 +263,7 @@
                             <li>
                                 <h3 style="font-family:Helvetica">
                                     <b>
-                                        Wavelet Flow: Optical Flow Guided Wavelet Facial Image
-                                        Fusion
+                                        Wavelet Flow: Optical Flow Guided Wavelet Facial Image Fusion
                                     </b>
                                 </h3>
                                 <p style="font-family:Helvetica">
@@ -240,7 +271,6 @@
                                 </p>
                                 <p style="font-family:Helvetica">
                                     <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
-                                </p>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/pg19_wavelet.pdf"><u>PDF</u></a>]
@@ -268,7 +298,6 @@
                                 <p style="font-family:Helvetica">
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
                                 </p>
-                                </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_joint.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_joint_supp.pdf"><u>Supplemental Material</u></a>]
@@ -295,7 +324,6 @@
                                 </p>
                                 <p style="font-family:Helvetica">
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
-                                </p>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
