--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                                     <p style="font-family:Helvetica"><b>[Jul 02, 2020]:</b> <i> One papers is accepted to ECCV 2020.</i></p>
                                 </li>
                                 <li>
+                                    <p style="font-family:Helvetica"><b>[Jun 28, 2020]:</b> <i> Two papers is accepted to CASA 2020 and will be published in Computer Animation and Virtual Worlds.</i></p>
+                                </li>
+                                <li>
                                     <p style="font-family:Helvetica"><b>[May 01, 2020]:</b> <i> Two papers are accepted to CGI 2020 and will be published in The Visual Computer.</i></p>
                                 </li>
                                 <li>
